k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
