k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: dp
  ports:
    - protocol: TCP
      port: 1447
      targetPort: 1447
  type: LoadBalancer
